fix verification at end of gc, remove unnecessary debug code